--- a/main.css
+++ b/main.css
@@ -46,6 +46,7 @@ nav {
 	width: 100%;
     box-shadow: 0 4px 2px -2px rgba(211,211,211,0.4);
 	background-color: #154ec1;
+	position: sticky;
 }
 
 .navbar-item {
