--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
 }
 /* Components
    ====================================== */
-   
+
 .header {
     display: flex;
     flex-direction: row;
@@ -39,6 +39,7 @@ body {
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
+    background-color: #fff;
     box-shadow: 0 4px 2px -2px rgba(211,211,211,0.4);
 }
 
