--- a/main.css
+++ b/main.css
@@ -1,14 +1,15 @@
 body {
     margin: 0;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	background-color: #eaf1ff;
+    font-family: Verdana, Geneva, sans-serif;
+}
+p{
+    font-size: 20px;
+    
 }
 /* Components
    ====================================== */
-p{
-    font-size: 20px;
-    font-family: Verdana, Geneva, sans-serif;
-}
+
 .header {
     display: flex;
     flex-direction: row;
@@ -35,6 +36,7 @@ p{
 .header-text {
     color: #fff;
     font-size: 3rem;
+    font-family: Indie Flower;
 }
 
 .navbar {
