--- a/main.css
+++ b/main.css
@@ -82,3 +82,12 @@ p{
 .container {
     width: 90%;
 }
+footer {
+	width: 90%;
+	padding: 1%;
+	background-color: #caccce;
+    height: 10%;
+    padding: 1%;
+    margin: 1%;
+    margin-bottom: 0;
+}
