--- a/main.css
+++ b/main.css
@@ -76,9 +76,24 @@ p{
     color: #555;
     
 }
-.article img {
-    max-width: 100%;
+.article-img {
+    width: 75%;
+    display: flex;
+    flex-direction: row;
+    padding: 7.5%;
+    
 }
 .container {
     width: 90%;
+}
+.article-segment{
+   width: 50%;
+    display: flex;
+    flex-direction: column;
+    vertical-align: middle;
+    padding: 3%;
+}
+.article-row{
+    display: flex;
+    flex-direction: row;
 }
