--- a/main.css
+++ b/main.css
@@ -3,12 +3,10 @@ body {
 	background-color: #eaf1ff;
     font-family: Verdana, Geneva, sans-serif;
 }
+
 p{
     font-size: 20px;
-    
 }
-/* Components
-   ====================================== */
 
 .header {
     display: flex;
@@ -45,7 +43,7 @@ p{
     flex-wrap: nowrap;
     align-items: center;
     background-color: #fff;
-    box-shadow: 0 4px 2px -2px rgba(211,211,211,0.4);
+    box-shadow: 0 4px 2px -2px rgba(211,211,211,0.6);
 }
 
 .navbar-item {
@@ -57,8 +55,12 @@ p{
     text-decoration: none;
 
     padding: 20px 0;
-    border-bottom: 2px solid transparent;
-    border-right: 1px solid rgba(211,211,211,0.6);
+    border-bottom: 2px solid #d3d3d3;
+    border-right: 2px solid #d3d3d3;
+}
+
+.navbar-item:last-child {
+    border-right: 0;
 }
 
 .navbar-item:hover {
@@ -68,24 +70,24 @@ p{
 
 .content {
 	width: 100%;
-    padding: 0 5%;
+    padding: 20px 5%;
+    box-sizing: border-box;
 }
+
 .article {
     background-color: white;
     padding: 20px;
     color: #555;
-    
 }
+
 .article-img {
     width: 75%;
     display: flex;
     flex-direction: row;
     padding: 7.5%;
-    
 }
-.container {
-    width: 90%;
-}
+
+
 .article-segment{
    width: 50%;
     display: flex;
@@ -93,6 +95,7 @@ p{
     vertical-align: middle;
     padding: 3%;
 }
+
 .article-row{
     display: flex;
     flex-direction: row;
