--- a/main.css
+++ b/main.css
@@ -8,10 +8,18 @@ p{
     font-size: 20px;
 }
 
-.header {
+.flex-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
     align-items: center;
+}
+
+.flex-item {
+    flex: 1;
+}
+
+.header {
     padding: 5px;
     background-color: #66a0ff;
     overflow: hidden;
@@ -19,7 +27,6 @@ p{
 
 .header-item {
     margin: 5px;
-    flex: 1;
 }
 
 .header-item.logo {
@@ -38,22 +45,15 @@ p{
 }
 
 .navbar {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
     background-color: #fff;
     box-shadow: 0 4px 2px -2px rgba(211,211,211,0.6);
 }
 
 .navbar-item {
-    flex: 1;
     text-align: center;
-
     color: #66a0ff;
     font-size: 18px;
     text-decoration: none;
-
     padding: 20px 0;
     border-bottom: 2px solid #d3d3d3;
     border-right: 2px solid #d3d3d3;
@@ -68,6 +68,10 @@ p{
     background-color: #f6f6f6;
 }
 
+.border {
+    border: 1px solid red;
+}
+
 .content {
 	width: 100%;
     padding: 20px 5%;
@@ -76,27 +80,19 @@ p{
 
 .article {
     background-color: white;
-    padding: 20px;
+    padding: 20px 5%;
     color: #555;
 }
 
 .article-img {
-    width: 75%;
-    display: flex;
-    flex-direction: row;
-    padding: 7.5%;
+    max-width: 100%;
+    max-height: 500px;
 }
 
-
-.article-segment{
-   width: 50%;
-    display: flex;
-    flex-direction: column;
-    vertical-align: middle;
-    padding: 3%;
+.article-row {
+    padding: 20px 0;
 }
 
-.article-row{
-    display: flex;
-    flex-direction: row;
+.article-item {
+    padding: 10px 20px;
 }
